Adapt to the standard tooling
This patch adapts the project so that it can be built with the stantard
tooling that was introduced in the previous patch.

Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,6 @@
 *.tar
 *.tar.gz
 .hash
-/.downloads
-/.gopath
 /.idea
-/CHANGES.html
-/README.html
-/pkg/client
-/vendor
-zz_generated.deepcopy.go
+/_output
+/autoheal
