--- a/manifests/autoheal-service-account.yml
+++ b/manifests/autoheal-service-account.yml
@@ -15,13 +15,6 @@
 #
 
 apiVersion: v1
-kind: Route
+kind: ServiceAccount
 metadata:
-  name: healer
-spec:
-  host: healer.private
-  port:
-    targetPort: 9099
-  to:
-    kind: Service
-    name: healer
+  name: autoheal
