--- a/testdata/empty-config.yml
+++ b/testdata/empty-config.yml
@@ -4,9 +4,9 @@
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-# 
+#
 #   http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,12 +14,4 @@
 # limitations under the License.
 #
 
-# This secret contains the user name and password used to access the AWX API.
-
-apiVersion: v1
-kind: Secret
-metadata:
-  name: awx
-data:
-  username: YWxlcnQtaGVhbGVy
-  password: RVB5WjhNencvUWVwbFE=
+# This is a empty configuration file used only for tests.
