Use `prune` the option of `dep`
Version 0.3.2 of `dep` introuced a new pruning capability that reduces
considerable the number of files inside the `vendor` directory. That is
disabled by default. This patch enables it.

Signed-off-by: Juan Hernandez <jhernand@redhat.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,3 +24,8 @@
 [[override]]
   name = "k8s.io/code-generator"
   version = "kubernetes-1.9.2"
+
+[prune]
+  go-tests = true
+  non-go = true
+  unused-packages = true
