Secure connection by default between autoheal and AWX
This commit adds support for setting the CA root cert in the AWX
client, and defaults to validating this cert.

If no root cert is specified, the system trust store will be used.

To retain the "insecure" option (the previous default),
for use for development, a new "insecure" option was added
to the configuration file

--- a/autoheal.yml
+++ b/autoheal.yml
@@ -51,6 +51,13 @@ awx:
     name: my-awx-tls
 
   #
+  # Whether to use an insecure connection to the AWX server
+  # this should always be set to false in production,
+  # but can be set to true when developing. Defaults to false.
+  #
+  insecure: false
+
+  #
   # The name of the AWX project that contains the auto-heal job templates.
   #
   project: "My project"
