Document the `awx.insecure` parameter in `README.md`
This patch adds a paragraph to the `README.md` file explaining the
meaning of the `awx.insecure` parameter, mostly copied from the comment
in the configuration file.

Signed-off-by: Juan Hernandez <jhernand@redhat.com>

--- a/autoheal.yml
+++ b/autoheal.yml
@@ -51,9 +51,9 @@ awx:
     name: my-awx-tls
 
   #
-  # Whether to use an insecure connection to the AWX server
-  # this should always be set to false in production,
-  # but can be set to true when developing. Defaults to false.
+  # Whether to use an insecure connection to the AWX server this should always
+  # be set to `false` in production, but can be set to `true` when developing.
+  # Defaults to `false`.
   #
   insecure: false
 
