--- a/autoheal.yml
+++ b/autoheal.yml
@@ -62,6 +62,11 @@ awx:
   #
   project: "My project"
 
+  #
+  # How often to check active jobs status. default: 5 minutes.
+  #
+  jobStatusCheckInterval: 5m
+
 #
 # This section describes how to throttle the execution of healing rules.
 throttling:
