Use `autoheal.openshift.io` API group
The initial prototypes of the auto-heal service used the
`monitoring.openshift.io` API group because it was intended to contain
also types to define Prometheus alerting rules. That has been changed
during the design of the service, and it only takes care now of healing
rules. To reflect that this patch changes the API group to
`autoheal.openshift.io` and the API version to `v1alpha2`.

Signed-off-by: Juan Hernandez <jhernand@redhat.com>

--- a/template.yml
+++ b/template.yml
@@ -35,7 +35,7 @@ parameters:
 - name: NAMESPACE
   description: |-
     The namespace where the auto-heal service will be created.
-  value: openshift-monitoring
+  value: openshift-autoheal
 - name: AWX_ADDRESS
   description: |-
     The URL of the AWX API endpoint, including the `/api` suffix, but not the
