--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -72,3 +72,7 @@ required = [
 [[constraint]]
   name = "github.com/spf13/pflag"
   version = "1.0.1"
+
+[[constraint]]
+  name = "github.com/yaacov/observer"
+  version = "1.4.1"
