Fix the way extraVars are sent to AWX.
Change extraVars field from string to JSON, as AWX API expects it.
In autoheal.yml change the field from YAML string to JSON.
Add map support in object_template.go processValue func.
This changed required changing the processString function not to change the string inplace but to return it,
Also the recursion in processValue had to return and set new values back to the map, since reflect API doesn't allow changing in place.
Add test that validates the object parameter sent to Process function is of pointer type
Since we use interface{} to wrap the object this can't be validated using compilation
use reflection to validate this in runtime
Change autoheal API, ExtraVars is now a new JsonDoc object with DeepCopy function and add test for it
Change short_term_test to match new API

--- a/autoheal.yml
+++ b/autoheal.yml
@@ -139,10 +139,8 @@ rules:
     alertname: "NodeDown"
   awxJob:
     template: "Start node"
-    extraVars: |-
-      {
-        "node": "{{ $labels.instance }}"
-      }
+    extraVars: 
+      node: "{{ $labels.instance }}"
 
 #
 # This rule runs a batch job that uses Python to say hello when the
