--- a/examples/playbooks/start_ovirt_node.yml
+++ b/examples/playbooks/start_ovirt_node.yml
@@ -27,10 +27,8 @@
 #
 #   awxJob:
 #     template: "Start node"
-#     extraVars: |-
-#       {
-#         "instance": "{{ $labels.instance }}"
-#       }
+#     extraVars: 
+#       instance: "{{ $labels.instance }}"
 #
 # That will populate the `instance` variable with the value of the `instance`
 # label of the alert, which will be the IP address of the node if the alert is
