--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -64,3 +64,11 @@ required = [
 [[constraint]]
   name = "github.com/moolitayer/awx-client-go"
   version = "=0.0.1"
+
+[[constraint]]
+  name = "github.com/spf13/cobra"
+  version = "0.0.2"
+
+[[constraint]]
+  name = "github.com/spf13/pflag"
+  version = "1.0.1"
