--- a/examples/autoheal-dev.yml
+++ b/examples/autoheal-dev.yml
@@ -33,8 +33,8 @@ rules:
     alertname: "NodeDown"
   awxJob:
     template: "Start node"
+    extraVars:
       node: "{{ $labels.instance }}"
-      
 
 - metadata:
     name: say-hello
