--- a/examples/autoheal-dev.yml
+++ b/examples/autoheal-dev.yml
@@ -35,6 +35,7 @@ rules:
     template: "Start node"
     extraVars:
       node: "{{ $labels.instance }}"
+    limit:  "{{ $labels.instance }}"
 
 - metadata:
     name: say-hello
